Update index.html and DetailPost components

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://cdn0.iconfinder.com/data/icons/font-awesome-brands-vol-1/512/dev-64.png" sizes="64x64" />
+
+  <!-- <img width=" 32" height="32" src="https://img.icons8.com/windows/32/1A1A1A/dev.png" alt="dev" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Dev Community</title>
 </head>
